Fixed opcache issues; Fixed path to dev.ini on docker compose;

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: ./infra/local/docker/Dockerfile
     volumes:
       - ./:/app
-      - ./docker/php/prod.ini:/usr/local/etc/php/conf.d/prod.ini
+      - ./infra/local/docker/php/dev.ini:/usr/local/etc/php/conf.d/dev.ini
     working_dir: /app
     depends_on:
       - postgres
